# wavetable_manifold_synthesizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
plugin/: CMakeLists.txt
plugin/include/: AttachedSlider.h  PhasedMultitrackWindowManager.h  PluginEditor.h  PluginProcessor.h  WMS.h  params.h  util.h
plugin/source/: AttachedSlider.cpp  PluginEditor.cpp  PluginProcessor.cpp  WMS.cpp  params.cpp
